# tiered_rag

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  EIGHTH_PHASE_PLAN.md  EVAL_REPORT.md  FIFTH_PHASE_PLAN.md  FIRST_PHASE_PLAN.md  FOURTH_PHASE_PLAN.md  README.md  SECOND_PHASE_PLAN.md  SEVENTH_PHASE_PLAN.md  SIXTH_PHASE_PLAN.md  THIRD_PHASE_PLAN.md  clear_cache.sh  deploy_ollama.sh  docker-cleanup.sh  docker-compose.openai.yml  docker-compose.yml  pyproject.toml  requirements.txt
complete_plans/: 00_MAJOR_PHASES.md  01_FIRST_PHASE_PLAN.md  04_FOURTH_PHASE_PLAN.md  06_SIXTH_PHASE_PLAN.md
scripts/: build_item_details.py  build_knowledge_base.py  cost_breakdown.py  eval_report.py  load_test.py  set_telegram_webhook.py  telegram_poll.py
tests/: _helpers.py  conftest.py  test_alertboard.py  test_alerting.py  test_api.py  test_cache.py  test_config.py  test_cost_attribution.py  test_embeddings.py  test_eval_abstention.py  test_eval_routing.py  test_failover.py  test_http.py  test_ingest.py  test_integration_cache.py  test_integration_failover.py  test_integration_load.py  test_integration_mock_llm.py  test_integration_pipeline.py  test_integration_rag.py  test_integration_routing.py  test_integration_telegram.py  test_item_details.py  test_knowledge_base.py  test_llm_client.py  test_llm_usage.py  test_mock_llm.py  test_observability.py  test_orchestrator.py  test_orchestrator_guardrail.py  test_orchestrator_tier1.py  test_orchestrator_tier2.py  test_orchestrator_tier3.py  test_orchestrator_tier3_plan.py  test_retrieval.py  test_router.py  test_router_schema.py  (+4 more)
(+27 files in other folders)
